src/test/contracts/negative/pattern_matching_anomalies/redundant_case/rx_rx_ry.mligo
type p = One | Two

type t = { a : int ; b : p }

let s (x : t) = 
  match x with
    { a ; b = One } -> ()
  | { a ; b = One } -> ()
  | { a ; b = Two } -> ()